# furlinter

./: .gitignore  OBSERVATIONS_ON_FURMAN_STYLE.md  TOML_TESTING.md  pyproject.toml
src/: furlinter.py
tests/: conftest.py  snippets_01.toml  snippets_02_single_line.toml  snippets_03_multiline_mixed.toml  test_toml_snippets.py
