[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "furlinter"
version = "0.1.0"
description = "Flake8 Plugin. Checks for a number of of Ethan Furman's preferences."
dependencies = ["flake8"]

[project.entry-points."flake8.extension"]
FUR = "furlinter:FurLinter"
